--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -5,7 +5,7 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Eine Stadt gründen!\nWähle den Siedler (Flaggensymbol) > Klicke auf 'Stadt gründen' (unten links). 
 Enter the city screen!\nClick the city button twice = Öffne den Stadtbildschirm!\n Klicke zweimal den Stadtknopf.
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wähle eine Technologie zum Erforschen!\nKlicke auf den Tech-Button (grünlich, oben links) > \n wähle Technologie > klicke auf 'Forschung' (unten rechts). 
-Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Wähle Produktion!\nÖffne Stadtbildschirm > Klicke auf eine Einheit oder ein Gebäude (linke Seite unten) > \n Klicke auf 'in Warteschlange einreihen'
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = Wähle Produktion!\nÖffne Stadtbildschirm > Klicke auf eine Einheit oder ein Gebäude (linke Seite unten) > \n Klicke auf 'Füge zur Warteschlange hinzu'
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beende eine Runde!\nGehe durch die Einheiten mit 'Nächste Einheit' > Klicke auf 'Nächste Runde'.
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Weise bearbeitete Felder neu zu!\nÖffne den Stadtbildschirm > klicke auf das zugewiesene (grüne) Feld, um es zu entfernen > \n klicke auf ein nicht zugewiesenes Feld, um die Bevölkerungszahl zuzuweisen.
 Meet another civilization!\nExplore the map until you encounter another civilization! = Triff eine andere Zivilisation!\n Erkunde die Karte, bis du einer anderen Zivilisation begegnest! 
@@ -61,7 +61,7 @@ Colossus = Koloss
 
 Temple = Tempel
 Burial Tomb = Grabstätte
-Doubles Gold given to enemy if city is captured = Verdoppelt die Menge an Gold für den Feind falls die Stadt erorbert wird
+Doubles Gold given to enemy if city is captured = Verdoppelt die Menge an Gold für den Feind, falls die Stadt erorbert wird
 Mud Pyramid Mosque = Lehmmoschee
 
 The Oracle = Das Orakel
@@ -74,13 +74,13 @@ Can only be built in coastal cities = Kann nur in Küstenstädten gebaut werden
 +1 food from Ocean and Coast tiles = +1 Nahrung von Ozean- und Küstenfeldern
 
 The Great Lighthouse = Der Große Leuchtturm
-'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 'Die mit Schiffen auf dem Meere fuhren und trieben ihren Handel auf großen Wassern, die des HERRN Werke erfahren haben und seine Wunder im Meer.' - Die Biebel, Psalms 107:23-25
+'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 'Die mit Schiffen auf dem Meere fuhren und trieben ihren Handel auf großen Wassern, die des HERRN Werke erfahren haben und seine Wunder im Meer.' - Die Bibel, Psalm 107,23-25
 All military naval units receive +1 movement and +1 sight = Alle militärischen Marineeinheiten erhalten +1 Bewegung und +1 Sicht
 
 National College = Nationale Hochschule
 
 Chichen Itza = Chichen Itza
-'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 'Der Katun wird in Chichen Itza eingerichtet. Dort soll die Besiedlung der Itza stattfinden. Der Quetzal wird kommen, der grüne Vogel wird kommen. Ah Kantenal wird kommen. Es ist das Wort Gottes. Die Itza wird kommen.'  - Fie bücher von Chilam Balam
+'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 'Der Katun wird in Chichen Itza eingerichtet. Dort soll die Besiedlung der Itza stattfinden. Der Quetzal wird kommen, der grüne Vogel wird kommen. Ah Kantenal wird kommen. Es ist das Wort Gottes. Die Itza wird kommen.'  - Die bücher von Chilam Balam
 Golden Age length increases +50% = Länge Goldener Zeitalter um 50% erhöht
 
 Courthouse = Gerichtsgebäude
@@ -97,7 +97,7 @@ Hanging Gardens = Hängende Gärten
 
 Colosseum = Kolosseum
 
-Terracotta Army = Terrakotta Armee
+Terracotta Army = Terrakotta-Armee
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 'Behandle Deine Soldaten als seien sie Deine Kinder und sie werden Dir in die tiefsten Täler folgen; betrachte sie als Deine geliebten Söhne und sie werden an Deiner Seite stehen, sogar bis zum Tode.' -Sun Tzu
 
 Market = Markt
@@ -314,7 +314,7 @@ Declare war on [civName]? = [civName] den Krieg erklären?
 You'll pay for this! = Dafür werden Sie bezahlen!
 Negotiate Peace = Frieden verhandeln
  # Requires translation!
-Peace with [civName]? = 
+Peace with [civName]? = Frieden mit [civName]?
 Very well. = Nun gut
 Farewell. = Auf Wiedersehen
 Sounds good! = Sehr gut
@@ -331,13 +331,13 @@ Denounce ([numberOfTurns] turns) = Denunziere ([numberOfTurns] Runden)
 We will remember this. = Das werden wir nie vergessen!
 
  # Requires translation!
-[civName] has declared war on [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName] hat Krieg gegen [targetCivName] erklärt!
  # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] und [targetCivName] haben den Friedensvertrag unterschrieben!
  # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] und [targetCivName] haben die Freundschaftserklärung unterzeichnet!
  # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has denounced [targetCivName]! = [civName] hat [targetCivName] denunziert!
 
 Unforgivable = Todfeind
 Enemy = Feind
@@ -364,8 +364,8 @@ You have publicly denounced us! = Ihr habt uns öffentlich angeprangert!
 You have denounced our allies = Ihr habt unsere Alliierten öffentlich angeprangert!
 You have denounced our enemies = Ihr habt unsere Feinde öffentlich angeprangert!
 You betrayed your promise to not settle cities near us = Ihr habt euer Versprechen gebrochen, nicht in unserer Nähe neue Städte zu gründen
-You fulfilled your promise to stop settling cities near us! = Ihr habt euer Versprechen gehalten, nicht in unserer Nähe neue Städte zu gründen
-You refused to stop settling cities near us = Ihr habt euch geweigert, nicht in unserer Nähe neue Städte zu gründen
+You fulfilled your promise to stop settling cities near us! = Ihr habt euer Versprechen gehalten, nicht in unserer Nähe neue Städte zu gründen!
+You refused to stop settling cities near us = Ihr habt euch geweigert, nicht in unserer Nähe neue Städte zu gründen!
 Your arrogant demands are in bad taste = Ihre arroganten Forderungen sind geschmacklos.
 Your use of nuclear weapons is disgusting! = Dein Einsatz von Atomwaffen ist ekelhaft!
 
@@ -378,53 +378,53 @@ We noticed your new city near our borders, despite your promise. This will have.
 # City states
 
  # Requires translation!
-Manila = 
+Manila = Manila
  # Requires translation!
-Kuala Lumpur = 
+Kuala Lumpur = Kuala Lumpur
  # Requires translation!
-Helsinki = 
+Helsinki = Helsinki
  # Requires translation!
-Quebec City = 
+Quebec City = uebec City
  # Requires translation!
-Hanoi = 
+Hanoi = Hanoi
  # Requires translation!
-Kathmandu = 
+Kathmandu = Kathmandu
  # Requires translation!
-Cape Town = 
+Cape Town = Kapstadt
  # Requires translation!
-Sydney = 
+Sydney = Sydney
  # Requires translation!
-Zanzibar = 
+Zanzibar = Sansibar
  # Requires translation!
-Singapore = 
+Singapore = Singapur
  # Requires translation!
-Edinburgh = 
+Edinburgh = Edinburgh
  # Requires translation!
-Almaty = 
+Almaty = Almaty
  # Requires translation!
-Sidon = 
+Sidon = Sidon
  # Requires translation!
-Kabul = 
+Kabul = Kabul
  # Requires translation!
-Brussels = 
+Brussels = Brüssel
  # Requires translation!
-Venice = 
+Venice = Venedig
  # Requires translation!
-Genoa = 
+Genoa = Genua
  # Requires translation!
-Ur = 
+Ur = Ur
  # Requires translation!
-Tyre = 
+Tyre = Tyros
  # Requires translation!
-Dublin = 
+Dublin = Dublin
  # Requires translation!
-Antwerp = 
+Antwerp = Antwerpen
  # Requires translation!
-Rio de Janeiro = 
+Rio de Janeiro = Rio de Janeiro
  # Requires translation!
-Florence = 
+Florence = Florenz
  # Requires translation!
-Milan = 
+Milan = Mailand
 
 Provides [amountOfCulture] culture at 30 Influence = Bietet [amountOfCulture] Kultur für 30 Einflusspunkte
 Provides 3 food in capital and 1 food in other cities at 30 Influence = Bietet 3 Nahrung in der Hauptstadt und 1 Nahrung in anderen Städten für 30 Einflusspunkte
@@ -435,7 +435,7 @@ Relationship changes in another [turnsToRelationshipChange] turns = Die Beziehun
 
 Cultured = Kultiviert
 Maritime = Maritim
-Mercantile = Finanztechnisch
+Mercantile = Kaufmännisch
 Militaristic = Militärisch
 Type:  = Typ: 
 Influence:  = Einfluss: 
@@ -558,11 +558,11 @@ Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Erhalte dreimal soviel Gold von Barbaren-Camps und plündern von Städten. Eingeschiffte Einheiten können sich selbst verteidigen.
 
  # Requires translation!
-Spain = 
+Spain = Spanien
  # Requires translation!
-Isabella = 
+Isabella = Isabella
  # Requires translation!
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 
+100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Gold für die Entdeckung eines Natürlichen Wunders (Bonus erhöht auf 500 Gold, wenn als erste Nation entdeckt). Kultur, Zufriedenheit und Felderträge von Natürlichen Wundern verdoppelt.
 
 # New game screen
 
@@ -579,9 +579,9 @@ Generated = Generiert
 Existing = Bestehende
 Map generation type = Art der Kartenerstellung
  # Requires translation!
-Default = 
+Default = Standard
  # Requires translation!
-Pangaea = 
+Pangaea = Pangaea
  # Requires translation!
 Perlin = 
  # Requires translation!
@@ -591,7 +591,7 @@ One City Challenge = Herausforderung eine Stadt
 No barbarians = Keine Barbaren
 No ancient ruins = Keine alten Ruinen
  # Requires translation!
-No Natural Wonders = 
+No Natural Wonders = Keine Natürlichen Wunder
 Victory conditions = Siegbedingungen
 Scientific = Wissenschaftlich
 Domination = Vorherrschaft
@@ -671,7 +671,7 @@ Upload map = Karte hochladen
 Could not upload map! = Kann Karte nicht hochladen!
 Map uploaded successfully! = Karte hochladen war erfolgreich!
  # Requires translation!
-Saving... = 
+Saving... = Speichern...
 
 # Options
 
@@ -747,7 +747,7 @@ A [unitName] has joined us! = Ein(e) [unitName] hat sich uns angeschlossen!
 An ancient tribe trains our [unitName] in their ways of combat! = Ein antiker Stamm bringt unserer(em) [unitName] dessen Kampftechniken bei!
 We have found a stash of [amount] gold in the ruins! = Wir haben [amount] Gold in den Ruinen gefunden!
  # Requires translation!
-We have found a crudely-drawn map in the ruins! = 
+We have found a crudely-drawn map in the ruins! =  Wir haben eine grob gezeichnete Karte in den Ruinen gefunden!
 [unit] finished exploring. = [unit] hat die Erkundung abgeschlossen.
 [unit] has no work to do. = [unit] hat keine Arbeit mehr.
 You're losing control of [name]. = Die Freundschaft mit [name] wird brüchig.
@@ -767,21 +767,21 @@ One of our trades with [nation] has been cut short = Einer unserer Handel mit [n
 [nation] agreed to stop settling cities near us! = [nation] ist damit einverstanden, keine Städte mehr in unserer Nähe zu gründen!
 [nation] refused to stop settling cities near us! = [nation] hat sich geweigert, keine Städte mehr in unserer Nähe zu gründen!
 We have allied with [nation]. = Wir sind mit [nation] alliiert.
-We have lost alliance with [nation]. = Wir haben die Alianz mit [nation] verloren.
+We have lost alliance with [nation]. = Wir haben die Allianz mit [nation] verloren.
  # Requires translation!
-We have discovered [naturalWonder]! = 
+We have discovered [naturalWonder]! = Wir haben [naturalWonder] entdeckt!
  # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
+We have received [goldAmount] Gold for discovering [naturalWonder] = Wir haben [goldAmount] Gold für die Entdeckung von [naturalWonder] erhalten
  # Requires translation!
-Your relationship with [cityStateName] is about to degrade = 
+Your relationship with [cityStateName] is about to degrade = Deine Beziehung zu [cityStateName] ist dabei sich zu verschlechtern
  # Requires translation!
-Your relationship with [cityStateName] degraded = 
+Your relationship with [cityStateName] degraded = Deine Beziehung zu [cityStateName] hat sich verschlechtert
  # Requires translation!
-A new barbarian encampment has spawned! = 
+A new barbarian encampment has spawned! = Ein neues Barbarenlager ist erschienen!
  # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = 
+Received [goldAmount] Gold for capturing [cityName] = [goldAmount] Gold für die Eroberung von [cityName] erhalten
  # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Our proposed trade request is no longer relevant! = Unsere vorgeschlagene Handelsanfrage ist nicht mehr relevant!
 
 # World Screen UI
 
@@ -844,7 +844,7 @@ Social policies = Sozialpolitiken
 Community = Gemeinschaft
 Close = Schließen
  # Requires translation!
-Do you want to exit the game? = 
+Do you want to exit the game? = Willst du das Spiel schließen?
 
 # City screen
 
@@ -938,8 +938,8 @@ Hurry Wonder = Wunder beschleunigen
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Deine Bevölkerung ist so zufrieden mit deiner Herrschaft, dass dein Imperium in ein Goldenes Zeitalter eintritt!
 You have entered the [newEra]! = Zeitalter [newEra] ist eingeläutet!
  # Requires translation!
-[civName] has entered the [eraName]! = 
-[policyBranch] policy branch unlocked! = Grundsatzzweig [policyBranch] wurde freigeschaltet
+[civName] has entered the [eraName]! = [civName] hat das Zeitalter [eraName] erreicht!
+[policyBranch] policy branch unlocked! = Grundsatzzweig [policyBranch] wurde freigeschaltet!
 Overview = Überblick
 Total = Gesamt
 Stats = Statistiken
@@ -967,9 +967,9 @@ Action = Aktion
 Defeated = Besiegt
 Tiles = Felder
  # Requires translation!
-Natural Wonders = 
+Natural Wonders = Natürliche Wunder
  # Requires translation!
-Treasury deficit = 
+Treasury deficit = Schatzkammerdefizit
 
 #Victory
 
