Unit test for actions translations is added

--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1384,6 +1384,7 @@ Fortify =
 Fortification = 
  # Requires translation!
 Sleep = 
+Sleep until healed = Sleep until healed
  # Requires translation!
 Moving = 
  # Requires translation!
