--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -764,6 +764,7 @@ Construct road = Будувати дорогу
 Fortify = Укріпити
 Fortification = Фортифікація
 Sleep = Спати
+Sleep until healed = Спати до одужання
 Moving = У русі
 Set up = Підготуватися
 Upgrade to [unitType] ([goldCost] gold) = Удосконалити до [unitType] ([goldCost] золота)
