--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -762,6 +762,7 @@ Construct road =
 Fortify = 
 Fortification = 
 Sleep = 
+Sleep until healed = 
 Moving = 
 Set up = 
 Upgrade to [unitType] ([goldCost] gold) = 
