--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -313,8 +313,7 @@ Declare war on [civName]? = [civName] den Krieg erklären?
 [leaderName] of [nation] = [leaderName] von [nation]
 You'll pay for this! = Dafür werden Sie bezahlen!
 Negotiate Peace = Frieden verhandeln
- # Requires translation!
-Peace with [civName]? = 
+Peace with [civName]? = Frieden mit [civName]?
 Very well. = Nun gut
 Farewell. = Auf Wiedersehen
 Sounds good! = Sehr gut
@@ -330,14 +329,10 @@ Indeed! = Auf jeden Fall!
 Denounce ([numberOfTurns] turns) = Denunziere ([numberOfTurns] Runden)
 We will remember this. = Das werden wir nie vergessen!
 
- # Requires translation!
-[civName] has declared war on [targetCivName]! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
- # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = [civName] hat [targetCivName] den Krieg erklärt!
+[civName] and [targetCivName] have signed the Peace Treaty! = [civName] und [targetCivName] haben den Friedensvertrag unterzeichnet!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = [civName] und [targetCivName] haben die Freundschaftserklärung unterschrieben!
+[civName] has denounced [targetCivName]! = [civName] hat [targetCivName] denunziert!
 
 Unforgivable = Todfeind
 Enemy = Feind
@@ -578,20 +573,15 @@ Map type = Kartentyp
 Generated = Generiert
 Existing = Bestehende
 Map generation type = Art der Kartenerstellung
- # Requires translation!
-Default = 
- # Requires translation!
-Pangaea = 
- # Requires translation!
-Perlin = 
- # Requires translation!
-Continents = 
+Default = Standard
+Pangaea = Pangäa
+Perlin = Perlin
+Continents = Kontinente
 Number of city-states = Anzahl Stadtstaaten
 One City Challenge = Herausforderung eine Stadt
 No barbarians = Keine Barbaren
 No ancient ruins = Keine alten Ruinen
- # Requires translation!
-No Natural Wonders = 
+No Natural Wonders = Keine Naturwunder
 Victory conditions = Siegbedingungen
 Scientific = Wissenschaftlich
 Domination = Vorherrschaft
@@ -670,8 +660,7 @@ Are you sure you want to delete this map? = Karte wirklich löschen?
 Upload map = Karte hochladen
 Could not upload map! = Kann Karte nicht hochladen!
 Map uploaded successfully! = Karte hochladen war erfolgreich!
- # Requires translation!
-Saving... = 
+Saving... = Speichern...
 
 # Options
 
@@ -746,8 +735,7 @@ We have discovered the lost technology of [techName] in the ruins! = Wir haben d
 A [unitName] has joined us! = Ein(e) [unitName] hat sich uns angeschlossen!
 An ancient tribe trains our [unitName] in their ways of combat! = Ein antiker Stamm bringt unserer(em) [unitName] dessen Kampftechniken bei!
 We have found a stash of [amount] gold in the ruins! = Wir haben [amount] Gold in den Ruinen gefunden!
- # Requires translation!
-We have found a crudely-drawn map in the ruins! = 
+We have found a crudely-drawn map in the ruins! = Wir haben eine grob gezeichnete Karte in den Ruinen gefunden!
 [unit] finished exploring. = [unit] hat die Erkundung abgeschlossen.
 [unit] has no work to do. = [unit] hat keine Arbeit mehr.
 You're losing control of [name]. = Die Freundschaft mit [name] wird brüchig.
@@ -768,20 +756,16 @@ One of our trades with [nation] has been cut short = Einer unserer Handel mit [n
 [nation] refused to stop settling cities near us! = [nation] hat sich geweigert, keine Städte mehr in unserer Nähe zu gründen!
 We have allied with [nation]. = Wir sind mit [nation] alliiert.
 We have lost alliance with [nation]. = Wir haben die Alianz mit [nation] verloren.
- # Requires translation!
-We have discovered [naturalWonder]! = 
- # Requires translation!
-We have received [goldAmount] Gold for discovering [naturalWonder] = 
+We have discovered [naturalWonder]! = Wir haben [naturalWonder] entdeckt!
+We have received [goldAmount] Gold for discovering [naturalWonder] = Wir haben [goldAmount] Gold für die Entdeckung von [naturalWonder] erhalten
  # Requires translation!
 Your relationship with [cityStateName] is about to degrade = 
  # Requires translation!
 Your relationship with [cityStateName] degraded = 
- # Requires translation!
-A new barbarian encampment has spawned! = 
+A new barbarian encampment has spawned! = Ein neues Barbarenlager ist entstanden!
  # Requires translation!
 Received [goldAmount] Gold for capturing [cityName] = 
- # Requires translation!
-Our proposed trade request is no longer relevant! = 
+Our proposed trade request is no longer relevant! = Unsere vorgeschlagene Handelsanfrage ist nicht mehr relevant!
 
 # World Screen UI
 
@@ -843,8 +827,7 @@ Victory status = Siegesstatus
 Social policies = Sozialpolitiken
 Community = Gemeinschaft
 Close = Schließen
- # Requires translation!
-Do you want to exit the game? = 
+Do you want to exit the game? = Möchten Sie das Spiel beenden?
 
 # City screen
 
@@ -966,8 +949,7 @@ Closest city = Nächstgelegene Stadt
 Action = Aktion
 Defeated = Besiegt
 Tiles = Felder
- # Requires translation!
-Natural Wonders = 
+Natural Wonders = Naturwunder
  # Requires translation!
 Treasury deficit = 
 
@@ -1042,10 +1024,8 @@ Version = Version
 Resolution = Auflösung
 Tileset = Felderset
 Map editor = Karteneditor
- # Requires translation!
-Create = 
- # Requires translation!
-New map = 
+Create = Erstellen
+New map = Neue Karte
  # Requires translation!
 Empty = 
 Language = Sprache
@@ -1260,8 +1240,7 @@ Trapping = Fallenstellen
 The Wheel = Das Rad
 'Wisdom and virtue are like the two wheels of a cart.' - Japanese proverb = 'Weisheit und Tugend sind wie die beiden Räder eines Karren.' - Japanisches Sprichwort
 Masonry = Mauerarbeiten
- # Requires translation!
-'How happy are those whose walls already rise!' - Virgil = 
+'How happy are those whose walls already rise!' - Virgil = 'Wie glücklich sind diejenigen, deren Mauern sich bereits erheben!' - Vergil
 Bronze Working = Bronzebearbeitung
 'Here Hector entered, with a spear eleven cubits long in his hand; the bronze point gleamed in front of him, and was fastened to the shaft of the spear by a ring of gold.' - Homer = 'Hier trat Hector mit einem elf Ellen langen Speer in der Hand ein; die bronzene Spitze schimmerte vor ihm und war mit einem goldenen Ring am Schaft des Speeres befestigt.' - Homer
 Optics = Optik
