--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -134,7 +134,7 @@ Longhouse = Довгий будинок
 
 Forge = Кузня
  # Requires translation!
-+15% production of land units = 
++15% production of land units = +15% до Виробництва
 
 Harbor = Гавань
 +1 production from all sea resources worked by the city = +1 виробництво за усі робочі морські ресурси міста
@@ -635,7 +635,7 @@ Upload map = Вивантажити мапу
 Could not upload map! = Неможливо вивантажити мапу!
 Map uploaded successfully! = Мапа вивантажена успішно!
  # Requires translation!
-Saving... = 
+Saving... = Збереження...
 
 # Options
 
@@ -824,15 +824,15 @@ Specialist Buildings = Спеціалізовані будівлі
 Specialist Allocation = Розподіл спеціалістів
 Specialists = Спеціалісти
  # Requires translation!
-[specialist] slots = 
+[specialist] slots = Слотів: [specialist]
  # Requires translation!
-Engineer specialist = 
+Engineer specialist = Інженер-спеціаліст
  # Requires translation!
-Merchant specialist = 
+Merchant specialist = Купец-спеціаліст
  # Requires translation!
-Scientist specialist = 
+Scientist specialist = Учений-спеціаліст
  # Requires translation!
-Artist specialist = 
+Artist specialist = Митець-спеціаліст
 Food eaten = Їжі з’їдено
 Growth bonus = Бонус до зростання
 Unassigned population = Незайняте населення
@@ -994,11 +994,11 @@ Resolution = Роздільність
 Tileset = Палітра клітинок
 Map editor = Редактор мап
  # Requires translation!
-Create = 
+Create = Створити
  # Requires translation!
-New map = 
+New map = Нова мапа
  # Requires translation!
-Empty = 
+Empty = Пусто
 Language = Мова
 Terrains & Resources = Місцевість і ресурси
 Improvements = Удосконалення
