"Fortify until healed" functionality

--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1380,6 +1380,7 @@ Stop automation =
 Construct road = 
  # Requires translation!
 Fortify = 
+Fortify until healed = Fortify until healed
  # Requires translation!
 Fortification = 
  # Requires translation!
