--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -760,8 +760,10 @@ Automate = Автоматизировать
 Stop automation = Остановить автоматизацию
 Construct road = Построить дорогу
 Fortify = Укрепить
+Fortify until healed = Укрепить до выздоровления
 Fortification = к защите
 Sleep = Спать
+Sleep until healed = Спать до выздоровления
 Moving = В движении
 Set up = Подготовиться
 Upgrade to [unitType] ([goldCost] gold) = Улучшить до [unitType] ([goldCost] золота)
