--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -762,6 +762,7 @@ Automate = Автоматизувати
 Stop automation = Зупинити автоматизацію
 Construct road = Будувати дорогу
 Fortify = Укріпити
+Fortify until healed = Укріпити до одужання
 Fortification = Фортифікація
 Sleep = Спати
 Sleep until healed = Спати до одужання
