--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -760,6 +760,7 @@ Automate =
 Stop automation = 
 Construct road = 
 Fortify = 
+Fortify until healed = 
 Fortification = 
 Sleep = 
 Sleep until healed = 
