--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,6 +6,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Required to access mods folder below Android 4.4, but not needed after that -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+                     android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/uncivicon2"
