"Sleep until healed" functionality (#1821)
* "Sleep until healed" functionality

* Unit test for actions translations is added

* "Fortify until healed" functionality

* Refactoring

--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1380,10 +1380,12 @@ Stop automation =
 Construct road = 
  # Requires translation!
 Fortify = 
+Fortify until healed = Fortify until healed
  # Requires translation!
 Fortification = 
  # Requires translation!
 Sleep = 
+Sleep until healed = Sleep until healed
  # Requires translation!
 Moving = 
  # Requires translation!
