--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -760,8 +760,10 @@ Automate =
 Stop automation = 
 Construct road = 
 Fortify = 
+Fortify until healed = 
 Fortification = 
 Sleep = 
+Sleep until healed = 
 Moving = 
 Set up = 
 Upgrade to [unitType] ([goldCost] gold) = 
