--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -762,8 +762,10 @@ Automate = Автоматизувати
 Stop automation = Зупинити автоматизацію
 Construct road = Будувати дорогу
 Fortify = Укріпити
+Fortify until healed = Укріпити до одужання
 Fortification = Фортифікація
 Sleep = Спати
+Sleep until healed = Спати до одужання
 Moving = У русі
 Set up = Підготуватися
 Upgrade to [unitType] ([goldCost] gold) = Удосконалити до [unitType] ([goldCost] золота)
