--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -3,7 +3,7 @@
 
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = ユニットを移動させる\nユニットをクリック>移動先をクリック>矢印ポップアップをクリック
 Found a city!\nSelect the Settler (flag) > Click on 'Found city' (bottom-left corner) = 都市を建設\n開拓者(旗ユニット)を選択>「都市を建設」(左下隅)をクリック
-Enter the city screen!\nClick the city button twice = 都市メニューを開く\n都市ボタンを2回クリック
+Enter the city screen!\nClick the city button twice = 都市画面を開く\n都市を2回クリック
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究する技術を選択\n技術ボタンをクリック(左上の緑色> \ n技術を選択>「研究」をクリックします（右下）
 Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
@@ -749,7 +749,7 @@ turn = ターン
 Next unit = 次のユニット
 Pick a policy = 政策を選ぶ
 Movement = 移動
-Strength = 力
+Strength = 戦闘力
 Ranged strength = 範囲力
 Bombard strength = 爆撃力
 Range = 範囲
